Heroku fix and mobile device zooming prevented
Fixed crash on Heroku application and added a temporary solution to stop the webpage from zooming in on mobile devices when an input is selected. A better solution (for accessiblity reasons) will be looked into later on.

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 			<p style="font-weight: 600;">Welcome to the chatroom!</p>
 		</main>
 		<form id="sender" onsubmit="chat(event);">
-			<textarea id="chatbox" onkeypress="if(event.keyCode == 13 && !event.shiftKey) chat(event);" minlength=1 maxlength=2048></textarea>
+			<textarea id="chatbox" onkeypress="if(event.keyCode == 13 && !event.shiftKey) chat(event);" minlength=1 maxlength=2048 onfocus="event.stopPropagation();"></textarea>
 			<input type="submit" value="&rarr;">
 		</form>
 		<div class="bluroverlay"></div>
@@ -32,7 +32,7 @@
 			<div id="newuser">
 				<p style="font-weight: 400;">Welcome! Choose a name.</p>
 				<form onsubmit="choosename(event);">
-					<input type="text" id="username" minlength=3 maxlength=32 style="float: left;">
+					<input type="text" id="username" minlength=3 maxlength=32 style="float: left;" onfocus="event.stopPropagation();">
 					<input type="submit" value="&rarr;" style="float: right;">
 				</form>
 			</div>
